# pycon-redux.com

./: .gitignore  .gitmodules  .pre-commit-config.yaml  .yamllint  README.md  config.toml  hugo.toml  pyproject.toml  requirements.in  requirements.txt
.github/workflows/: hugo.yaml  lint-test.yaml
content/en/: _index.md
content/en/2022/: _index.md  adding-pipe-operator.md  adding-pipe-operator.md.part  asyncio-task-failure.md  asyncio-task-failure.md.part  bug-elsewhere.md  bug-elsewhere.md.part  code-completer.md  code-completer.md.part  editable-installs.md  editable-installs.md.part  keynote-day1.md  keynote-day1.md.part  keynote-day2.md  keynote-day2.md.part  keynote.md  match-statement.md  match-statement.md.part  match_statement.py  miscellaneous-facts-sayings.md.part  perfect-match.md  perfect-match.md.part  performance-antipatterns.md  performance-antipatterns.md.part  performant-code.md  performant-code.md.part  pipe-operator.md  pipe-operator.md.part  test_match_statement.py  test_perfect_match.py
content/en/2022/_includes/: _index.md  keynote.part.md  perfect_match.py  test_perfect_match.py
content/en/2022/better-error-messages/: _index.md  better-error-messages.md.part
content/en/2023/: _index.md  adaptive-interpreter.md  adaptive-interpreter.md.part  asyncio-and-gil.md  asyncio-and-gil.md.part  faster-cpython.md  faster-cpython.md.part  keynote-day1.md  keynote-day1.md.part  memory-profilers.md  memory-profilers.md.part  miscellaneous-facts-sayings.md.part  nanoservices.md  per-gil-interpreter.md  per-gil-interpreter.md.part  syntactic-sugar.md  syntactic-sugar.md.part  timezones.md  timezones.md.part
content/en/2023/adaptive-interpreter/: _index.md
content/en/2023/keynote-day3/: _index.md  keynote-day3.md.part
content/en/2023/nanoservices/: _index.md  nanoservices.md.part  nanoservices.py  test_nanoservices.py
content/en/2024/: _index.md
data/menu/: extra.yaml
pycon-redux/: hugo.toml
pycon-redux/content/en/2022/: _index.md
pycon-redux/content/en/2022/_includes/: perfect-match.part.md
pycon-redux/layouts/partials/head/: favicons.html
pycon-redux/static/: README.md
themes/: .gitignore
